deploy/kubernetes/services/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: docker-pull
      containers:
        - name: api
          image: jensdll/image-data-hiding:api.latest
          imagePullPolicy: Always
          volumeMounts:
            - name: appsettings-json
              mountPath: /app/appsettings.json
              subPath: appsettings.json
              readOnly: true
          resources:
            requests:
              cpu: '600m'
              memory: '1Gi'
            limits:
              cpu: '1200m'
              memory: '2Gi'
          ports:
            - containerPort: 80
      volumes:
        - name: appsettings-json
          configMap:
            name: appsettings.json
