deploy/kubernetes/services/base/api/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-rate-limit
spec:
  rateLimit:
    average: 1
    period: 1h
    burst: 90
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.imagedatahiding.com`)
      kind: Rule
      middlewares:
        - name: api-rate-limit
      services:
        - name: api-svc
          kind: Service
          port: 80
  tls:
    secretName: api-cert
